[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.6" }
clap = { version = "4.3", features = ["derive"] }
deadpool-postgres = "0.10.2"
dict = "0.1.5"
petgraph = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.6" }

